# doc-gpt

./: DATABASE_SETUP.md  DOCTOR_GPT_SETUP.md  KAGGLE_INTEGRATION.md  docker-compose.yml  env.example  next.config.js  package-lock.json  package.json  test_upload.txt
app/: layout.tsx  page.tsx
app/admin/qdrant/: page.tsx
app/api/admin/qdrant/collections/: route.ts
app/api/admin/qdrant/search/: route.ts
app/api/chat/doctor-gpt/: route.ts
app/api/chat/doctor-gpt/events/: route.ts
app/api/upload/medical-documents/: route.ts
components/: ChatWindow.tsx  MedicalDocumentUpload.tsx  UploadDocumentsForm.tsx
config/: index.ts
docker/postgres/init/: 01-init-extensions.sql
docker/redis/: redis.conf
langchain-nextjs-template/: package-lock.json  package.json
langchain-nextjs-template/app/: page.tsx
langchain-nextjs-template/app/admin/qdrant/: page.tsx
langchain-nextjs-template/components/: ChatWindow.tsx  CustomChatWindow.tsx  MedicalDocumentUpload.tsx
langchain-nextjs-template/config/: index.ts
langchain-nextjs-template/docker/pgadmin/: servers.json
langchain-nextjs-template/docker/postgres/conf/: postgresql.conf
langchain-nextjs-template/docker/postgres/init/: 02-create-vector-functions.sql
langchain-nextjs-template/lib/medical/: medical-data-service.ts
langchain-nextjs-template/lib/models/: repository.ts
langchain-nextjs-template/lib/models/providers/: claude.ts  openai.ts
langchain-nextjs-template/lib/preprocessing/: document-preprocessor.ts  prompt-templates.ts
langchain-nextjs-template/lib/search/: tavily.ts
langchain-nextjs-template/lib/vector/: qdrant-service.ts
langchain-nextjs-template/lib/workflows/: doctor-gpt-workflow.ts  types.ts
langchain-nextjs-template/prisma/: schema.prisma
langchain-nextjs-template/scripts/: seed-medical-data.ts  seed-medical-simple.ts
lib/cost-tracking/: tracker.ts  types.ts
lib/medical/: medical-data-service.ts
lib/models/: repository.ts  types.ts
lib/models/providers/: local-mock.ts  openai.ts
lib/session/: session-service.ts
lib/vector/: qdrant-service.ts
lib/workflows/: doctor-gpt-workflow.ts
prisma/: schema.prisma
python-backend/: .gitignore  README.md  alembic.ini  environment.yml  pyproject.toml  setup_environment.sh  test_config.py
python-backend/alembic/: README  env.py
python-backend/app/: __init__.py  main.py
python-backend/app/api/: __init__.py  router.py
python-backend/app/api/endpoints/: __init__.py  admin.py  chat.py  retrieval.py  upload.py
python-backend/app/core/: config.py  logging.py
python-backend/app/db/: __init__.py  session.py
python-backend/app/models/: __init__.py  base.py  chat.py  cost_log.py  document_chunk.py  event.py  medical_knowledge.py  medical_report.py  session.py  session_file.py  session_log.py  user.py
python-backend/app/services/: __init__.py  cost_tracking.py  doctor_gpt_workflow.py  document_processor.py  medical_data.py  model_repository.py  qdrant_service.py
python-backend/app/utils/: __init__.py  embeddings.py  file_processing.py  medical.py
python-backend/scripts/: __init__.py  comprehensive_test.py  create_test_user.py  init_databases.py  test_apis.py
scripts/: ingest-kaggle-data.ts  init-databases.ts
